src/App.css
/* General Styles */
* {
    box-sizing: border-box;
}

.App {
    text-align: center;
    min-height: 100vh;
}

body {
    background-color: white;
    color: #363837;
}

main {
    width: 70%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
}

h1 {
    font-size: 2rem;
    font-weight: 400;
}

a:hover {
    color: #72bd6b;
}

.highlight {
    color: #72bd6b;
    text-decoration: underline;
}

#recycling-guide, #posts {
    padding-top: 6rem;
}

/* Buttons */
.btn {
    border-radius: 20px;
    padding: .3rem 1rem;
}

.btn-main {
    color: white;
    background-color: #72bd6b;
}

.btn:hover {
    color: white;
    text-decoration: underline;
}

/* Navigation */
.nav-bg {
    background: white !important;
}

nav {
    width: 70%;
    margin-left: auto;
    margin-right: auto;
}

.navbar-brand {
    display: flex;
    align-items: center;
}

.navbar-brand h3 {
    color: #72bd6b;
    font-size: 1.5rem;
}

.navbar-brand img {
    width: auto;
    height: 25px;
}

nav a,
nav button {
    letter-spacing: 1px;
}

a.nav-link:hover {
    text-decoration: underline;
}

.nav-item {
    font-size: 1rem;
    margin-left: 1.5rem;
}

.navbar-light .navbar-nav .active>.nav-link {
    color: #72bd6b;
}

div .sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
}

/* Modal */
.modal-backdrop {
    position: unset !important;
}

.modal-content {
    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
    padding: 1rem;
}

/* Footer */
footer div {
    font-size: .7rem;
}

footer a {
    color: #72bd6b;
}

/* Home Page */
#landing-page {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#home {
    display: flex;
    flex-direction: column;
    margin-top: 5rem;

}

#home-caption {
    width: 100%;
    text-align: left;
    order: 2;
}

#home-img {
    width: 85%;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin-left: auto;
    margin-right: auto;
    order: 1;
}

#home-img img {
    width: 100%;
}

#stat-2 img, #stat-3 img{
    width: 100%;
}

#stat-1 h1 {
    font-size: 2.5rem;
    font-weight: 600;
}

#stat-1 h2 {
    font-size: 1.4rem;
    font-weight: normal;
}

#info-container {
    display: flex;
    flex-direction: column-reverse;
}

#stat-1 {
    margin-left: auto;
    margin-right: auto;
}

#stat-2 {
    margin-bottom: 2rem;
    order: 2;
}

#stat-3 {
    order: 1;
}

/* Posts */
.card {
    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
    border-radius: 15px;
}

.card img {
    cursor: pointer;
}

.row {
    flex-wrap: nowrap;
}

.card-body a {
    display: inline;
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
    filter: invert(100%);
}

i.fas.fa-plus-circle.fa-3x {
    color: #72bd6b;
}

/* Recycle Guide */
.search {
    background-color: white;
    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    border-radius: 0.4em;
    font-size: 1.5rem;
}

input.input-item {
    color: #72bd6b;
    border: none;
    border-bottom: 0.1rem solid #e5e5e5;
}

input:focus {
    outline: none !important;
}

.search img {
    display: inline;
    width: auto;
    height: 1em;
}

.results h1 {
    color: #72bd6b;
}

.recycle-result {
    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
    display: flex;
    flex-direction: column;
}

.recycle-result h2 {
    color: #72bd6b;
    font-weight: 400;
    font-size: 1rem;
}

.recycle-result p,
.recycle-result a {
    opacity: .5;
    font-size: .8rem;
    color: #363837;
}

/* Profile Page */
.profile-info {
    display: flex;
    align-items: center;
    text-align: center;
}

.profile-img img {
    width: auto;
    height: 5rem;
}

.profile-img {
    margin-left: auto;
}

.profile-img p {
    font-size: .8rem;
    opacity: .8;
}

.profile-text {
    text-align: left;
    margin-right: auto;
}

.profile-text h1 {
    font-weight: 300;
    font-size: 1.7rem;
}

.profile-text2 {
    display: flex;
    align-items: center;
}

.profile-text2 img {
    width: auto;
    height: 1rem;
}

.profile-text2 .btn {
    border-radius: 3px;
    border-style: solid;
    border-color: rgba(var(--b6a, 219, 219, 219), 1);
}

.post-amount {
    font-weight: bold;
}

.profile-posts {
    border-top: 1px solid rgba(var(--b38, 219, 219, 219), 1);
    width: 70%;
    margin-left: auto;
    margin-right: auto;
}

.profile-posts img {
    width: 100%;
}

.icon {
    margin-left: 5px;
    max-width: 12%;
    max-height: 12%;
}

.icon-in-full-post {
    margin-left: 5px;
    max-width: 10%;
    max-height: 10%;
}

/* Media Queries */
  @media only screen and (min-width: 600px) {
    /* .icon {
        margin-left: 5px;
        max-width: 6%;
        max-height: 6%;
    }

    .icon-in-full-post {
        margin-left: 5px;
        max-width: 3%;
        max-height: 3%;
    } */
  }

  @media (min-width: 992px) { 
    #home {
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    #home-caption {
        width: 40%;
        order: 1;
    }
    
    #home-img {
        width: 50%;
        order: 2;
        padding: 0;
    } 

    #info-container {
        flex-direction: row;
        justify-content: space-evenly;
        max-width: 60rem;
        margin-left: auto;
        margin-right: auto;
    }
    
    #info-container div {
        width: 45%;
    }

    #stat-1 {
        max-width: 60rem;
    }

    #stat-2 {
        margin-bottom: 2rem;
        order: 1;
    }
    
    #stat-3 {
        order: 2;
    }

    .results {
        max-width: 45rem;
        margin-left: auto;
        margin-right: auto;
    }

    .recycle-result {
        box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
        flex-direction: row;
        justify-content: space-between;
    }

    #info-2 {
        text-align: right;
    }    
  }

